// Copyright 2019 Lightbend Inc.

// Extension for specifying which field in a message is to be considered an
// entity key, for the purposes associating gRPC calls with entities and
// sharding.

syntax = "proto3";

package akkaserverless;

option go_package = "github.com/lightbend/akkaserverless-go-sdk/akkaserverless;akkaserverless";
option java_multiple_files = true;
option java_package = "com.akkaserverless";

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
  bool legacy_entity_key = 50002;
}
